More Jquery Stuff with Css

--- a/jquery-dom.html
+++ b/jquery-dom.html
@@ -2,8 +2,25 @@
 
 <body>
 
+    <!-- Including the css -->
+    <link rel="stylesheet" href="css/basic.css">
 
+    <p id="p1">This is a para</p>
+    <button id="button1">Button</button>
+    <br><br>
 
+    <!--handling attr() & css()-->
+    <button id="button2" random="attribute">Button with attribute</button><br><br>
+
+    <!--handling append()-->
+    <p id="p2">This is second para</p>
+    <button id="button3">Append</button><br><br>
+
+    <!-- Adding & removing css class-->
+    <p id="p3" class="redp">This is a red para</p>
+    <button id="button4">Change CSS class</button>
+
+    <!-- JqueryUI is another library that has been omitted-->
 
 </body>
 
